--- a/sass/partials/_header.sass
+++ b/sass/partials/_header.sass
@@ -4,7 +4,7 @@
   background-image: url('/img/header-image.jpg')
   margin-bottom: 0
   max-width: $container-width
-  @media (min-width: $response-tablet)
+  @include responsive(tablet) 
     margin-bottom: $section-margin
 
 .nav-main
@@ -45,7 +45,7 @@
   background: linear-gradient(rgba(0,0,0,0.5) 95%, rgba(0,0,0,0))
   padding: $section-padding
 
-  a 
+  > a 
     @extend %flex-box
     justify-content: center
     align-items: center
@@ -66,8 +66,9 @@
     padding: .5rem 0
 
     li
+      text-align: center
       margin-bottom: 1.25rem
-      width: 100%
+      
 
 .btn-hamburger
   @extend %background-format, %center-object
@@ -76,7 +77,7 @@
   padding: 1rem
   border: none
   cursor: pointer
-  @media (min-width: $response-tablet)
+  @include responsive(tablet)
     padding: 1.5rem
 
 
