--- a/sass/partials/_search-results.sass
+++ b/sass/partials/_search-results.sass
@@ -4,11 +4,7 @@
     margin-bottom: 1rem
   
   ul
-    display: flex
-    flex-flow: row
-    justify-content: space-between
-    flex-wrap: wrap
-    align-items: center
+    @extend %flex-box
 
   li
     background: $primary-color
